--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -98,6 +98,10 @@ msgctxt "model:stock.lot.cost_category,name:"
 msgid "Stock Lot Cost Category"
 msgstr "Categoría coste de lote"
 
+msgctxt "model:stock.lot.cost_category,name:cost_category_shipment_cost"
+msgid "Shipment Cost"
+msgstr "Coste envío"
+
 msgctxt "model:stock.lot.cost_category,name:cost_category_standard_price"
 msgid "Standard Price"
 msgstr "Precio estándar"
